Setup deployment pipeline

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: elixir
 otp_release:
-  - 17.4
+- 17.4
 addons:
-  postgresql: "9.3"
+  postgresql: '9.3'
 before_script:
-  - cp config/travis.exs config/test.exs
-  - MIX_ENV=test mix do deps.get, deps.compile, ecto.create, ecto.migrate
+- cp config/travis.exs config/test.exs
+- MIX_ENV=test mix do deps.get, deps.compile, ecto.create, ecto.migrate
+deploy:
+  provider: heroku
+  api_key:
+    secure: SrlGZ90AVszYkjlHRGrAOHT6McycgATX5ilbMdXmnNmyWq3ZqX6msX/QVB/T8dQL+sqpxv5cAB5OtxAH1noeA1FVdmRnbA+QGYQ3c59896bN3Zcb9iOWq5PRYVX5GSXj4GoqWU19U4SEjNtEpo1wReaWIvZb64ZHpApVsM1y8vA=
