--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ before_script:
 deploy:
   provider: heroku
   app: location-game
+  buildpack: https://github.com/HashNuke/heroku-buildpack-elixir.git
   api_key:
     secure: SrlGZ90AVszYkjlHRGrAOHT6McycgATX5ilbMdXmnNmyWq3ZqX6msX/QVB/T8dQL+sqpxv5cAB5OtxAH1noeA1FVdmRnbA+QGYQ3c59896bN3Zcb9iOWq5PRYVX5GSXj4GoqWU19U4SEjNtEpo1wReaWIvZb64ZHpApVsM1y8vA=
