--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: elixir
 otp_release:
-- 17.4
+  - 17.4
 addons:
   postgresql: '9.3'
 before_script:
-- cp config/travis.exs config/test.exs
-- MIX_ENV=test mix do deps.get, deps.compile, ecto.create, ecto.migrate
+  - cp config/travis.exs config/test.exs
+  - cp .gitignore.travis .gitignore
+  - npm install -g brunch
+  - brunch build --production
+  - MIX_ENV=test mix do deps.get, deps.compile, ecto.create, ecto.migrate
 deploy:
   provider: heroku
   app: location-game
